--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "react-native-modals": "^0.22.3",
     "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.15.0",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.34.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-tab-view": "*",
     "react-native-vector-icons": "^10.1.0"
   },
