--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@supabase/supabase-js": "^2.45.1",
     "@ui-kitten/components": "^5.3.1",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-modals": "^0.22.3",
     "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "*",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
