--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@supabase/supabase-js": "^2.45.1",
     "@ui-kitten/components": "^5.3.1",
+    "dayjs": "^1.11.13",
     "expo": "~51.0.31",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
