--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@supabase/supabase-js": "^2.45.1",
     "dayjs": "^1.11.13",
-    "expo": "~51.0.31",
+    "expo": "~51.0.37",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
+    "expo-font": "~12.0.10",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-countdown-circle-timer": "^3.2.1",
@@ -25,10 +28,12 @@
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "*",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
