--- a/package.json
+++ b/package.json
@@ -14,25 +14,29 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@supabase/supabase-js": "^2.45.1",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
-    "expo": "~51.0.37",
-    "expo-sqlite": "~14.0.6",
-    "expo-status-bar": "~1.12.1",
+    "expo": "~51.0.38",
+    "expo-auth-session": "^5.5.2",
     "expo-font": "~12.0.10",
+    "expo-status-bar": "~1.12.1",
+    "nodemailer": "^6.9.15",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-modals": "^0.22.3",
     "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-get-random-values": "^1.11.0",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "*",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.1.0",
+    "resend": "^4.0.0",
+    "text-encoding": "^0.7.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
