--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "@supabase/supabase-js": "^2.45.1",
+    "@supabase/supabase-js": "^2.45.4",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "expo": "~51.0.38",
@@ -22,6 +23,7 @@
     "expo-status-bar": "~1.12.1",
     "nodemailer": "^6.9.15",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-get-random-values": "^1.11.0",
@@ -35,6 +37,7 @@
     "react-native-tab-view": "*",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.10",
     "resend": "^4.0.0",
     "text-encoding": "^0.7.0",
     "uuid": "^10.0.0"
