--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "npx": "npx expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
@@ -15,13 +16,10 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@supabase/supabase-js": "^2.45.4",
-    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "expo": "~51.0.38",
-    "expo-auth-session": "^5.5.2",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
-    "nodemailer": "^6.9.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -38,8 +36,6 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "resend": "^4.0.0",
-    "text-encoding": "^0.7.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
