--- a/app.json
+++ b/app.json
@@ -16,12 +16,18 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/logoGPLX.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.namthanh29.GPLX"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "a738fb04-3440-4cb7-a0b1-63928cd83e95"
+      }
     }
   }
 }
